# FerrumWard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  jobs.json  rename_script.py  run.json  run_id.txt  touch_all.py  windows_fail.txt
.github/workflows/: ci.yml
dummy_game/: Cargo.toml
dummy_game/src/: main.rs
examples/: basic_usage.rs
ferrumward-attacker/: Cargo.toml
ferrumward-attacker/src/: main.rs
ferrumward-bevy/: Cargo.toml
ferrumward-bevy/src/: lib.rs
ferrumward-cli/: Cargo.toml
ferrumward-cli/src/: main.rs  packer.rs
ferrumward-cli/tests/: cli_tests.rs
ferrumward-core/: Cargo.toml
ferrumward-core/docs/: string-obfuscation.md
ferrumward-core/src/: error.rs  lib.rs
ferrumward-core/tests/: brutal_tests.rs  fingerprint_tests.rs  integration_tests.rs  license_tests.rs  macro_tests.rs
ferrumward-ffi/: Cargo.toml
ferrumward-ffi/include/: ferrumward.h
ferrumward-ffi/src/: lib.rs
ferrumward-godot/: .gitignore  Cargo.toml
ferrumward-godot/src/: lib.rs
ferrumward-loader/: Cargo.toml
ferrumward-loader/src/: main.rs
ferrumward-macros/: Cargo.toml
ferrumward-mock-game/: Cargo.toml
ferrumward-mock-game/src/: main.rs
integrations/unity/: FerrumWard.cs  RustShield.cs
rustshield-attacker/: Cargo.toml
rustshield-bevy/: Cargo.toml
rustshield-bevy/src/: lib.rs
rustshield-cli/: Cargo.toml
rustshield-cli/src/: main.rs  packer.rs
rustshield-cli/tests/: cli_tests.rs
rustshield-core/: Cargo.toml
rustshield-ffi/: Cargo.toml
rustshield-ffi/include/: rustshield.h
rustshield-ffi/src/: lib.rs
rustshield-godot/: Cargo.toml
rustshield-godot/src/: lib.rs
rustshield-loader/: Cargo.toml  build.rs
rustshield-macros/: Cargo.toml
rustshield-mock-game/: Cargo.toml
rustshield-mock-game/src/: main.rs
(+66 files in other folders)
