[package]
name = "rustshield-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C FFI bindings for RustShield"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rustshield-core = { path = "../rustshield-core", features = ["full"] }


# 
