[package]
name = "rustshield-mock-game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustshield-core = { path = "../rustshield-core", features = ["string-obfuscation"] }
rustshield-bevy = { path = "../rustshield-bevy" }
bevy.workspace = true
ed25519-dalek = "2.1.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("string-obfuscation"))'] }



# 
